cdn fix for stackblitz tailwind

--- a/src/app/components/drag/drag.component.html
+++ b/src/app/components/drag/drag.component.html
@@ -1,4 +1,4 @@
-<div class="target-area items-center w-full" #target>
+<div class="target-area items-center" #target>
   <div class="example-box"
        [style.background-color]="rgb"
        cdkDrag
